2007-12-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-glow-button.c: (totem_glow_button_glow),
	(take_screenshot), (copy_pixmap), (totem_glow_button_expose):
	Backport patch from Ryan Lortie <desrt@desrt.ca> from libwnck,
	Makes use of Cairo instead of GdkPixbuf for copying the pixmaps,
	see bug #439417 for details

2007-12-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/icons/48x48/Makefile.am:
	* data/icons/Makefile.am: Add 48x48 icon, so the icon
	isn't tiny when drag'n'dropping it on the desktop,
	icon from Andreas Nilsson (Closes: #502931)

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (on_got_redirect),
	(totem_embedded_on_fullscreen_exit): Better debug for
	redirects

2007-12-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require vala 0.1.5

	* bindings/vala/Makefile.am:
	* bindings/vala/totem.vala: Rename totem.vala
	to totem.vapi, fix build for newer versions of Vala
	(Closes: #502183)

2007-12-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: add missing libgnomeui dependency
	for the tracker widget, patch by Saleem Abdulrasool
	<compnerd@gentoo.org> (Closes: #502246)

2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: and more stupidness

2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Oopsie, update the plparser reqs
	to something that exists

2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update the plparser reqs

============ Version 2.21.5

2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.5
	* src/plugins/sample-vala/Makefile.am: fix distcheck

2007-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/mythtv/totem-mythtv.c: (impl_activate):
	Don't set the cursor for the window, we're not actually
	doing anything
	* src/totem-sidebar.c: (totem_sidebar_get_current_page),
	(totem_sidebar_set_current_page):
	* src/totem-sidebar.h: